[project]
name = "kovae"
version = "0.0.1"
description = "Koopman VAE (KoVAE) environment replication"
requires-python = ">=3.9"
authors = [
    { name = "Ilan Naiman", email = "example@example.com" }
]
dependencies = [
    "argparse==1.4.0",
    "torch>=2.0.0",
    "numpy==1.23.5",
    "neptune==1.2.0",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "tensorflow==2.12.0",
    "torchdiffeq==0.2.3",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }